--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,5 +10,6 @@
 <body>
   
   <nav>
-    <a href="/movies/new">New Movie</a>
+    <a href="/movies/new">New Movie</a> | 
+    <a href="/movies">All Movies</a>
   </nav>
