--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -10,7 +10,12 @@
   <div>Now Showing: </div>
   <div><%= movie.nowShowing ? 'Yes' : 'Nope' %></div>
   <!-- start cast list -->
-
+  <div>Cast:</div>
+  <ul>
+    <%- movie.cast.map(p =>
+      `<li>${p.name} <small>${p.born.toLocaleDateString()}</small></li>`
+    ).join('') %>
+  </ul>
   <!-- end cast list -->
 </section>
 <!-- add to cast form below this comment -->
