--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -157,3 +157,12 @@ hr {
   text-align: center;
 }
 
+ul {
+  margin: 0 0 1rem;
+  padding: 0;
+  list-style: none;
+}
+	
+li {
+  font-weight: bold;
+}
