--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -30,28 +30,31 @@
 </form>
 
 <br><br><h2>Reviews</h2>
-<form id="add-review-form" method="POST"
-  action="/movies/<%= movie._id %>/reviews">
-  <label>Review:</label>
-  <textarea name="content"></textarea>
-  <label>Rating:</label>
-  <select name="rating">
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5" selected>5</option>
-  </select>
-  <input type="submit" value="Add Review">
-</form>
-
+<% if (user) { %>
+  <form id="add-review-form" method="POST"
+    action="/movies/<%= movie._id %>/reviews">
+    <label>Review:</label>
+    <textarea name="content"></textarea>
+    <label>Rating:</label>
+    <select name="rating">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5" selected>5</option>
+    </select>
+    <input type="submit" value="Add Review">
+  </form>
+<% } %>
 <% if (movie.reviews.length) { %>
   <table>
     <thead>
       <tr>
+        <th>User</th>
         <th>Date</th>
         <th>Review</th>
         <th>Rating</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -59,9 +62,17 @@
       <% movie.reviews.forEach(function(r) { %>
         <% total += r.rating %>
         <tr>
+          <td class="review-user"><img src="<%= r.userAvatar %>" referrerpolicy="no-referrer" alt="avatar"><%= r.userName %></td>
           <td><%= r.createdAt.toLocaleDateString() %></td>
           <td><%= r.content %></td>
           <td><%= r.rating %></td>
+          <td>
+            <% if (user?._id.equals(r.user)) { %>
+              <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
+                <button type="submit">X</button>
+              </form>
+            <% } %>
+          </td>
         </tr>
       <% }); %>
       <tr>
