--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -55,6 +55,7 @@
         <th>Review</th>
         <th>Rating</th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -71,12 +72,19 @@
               <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
                 <button type="submit">X</button>
               </form>
-            <% } %>
-          </td>
+              <% } %>
+            </td>
+            <td>
+            <% if (user?._id.equals(r.user)) { %>
+              <form action="/reviews/<%= r._id %>/edit" method="GET">
+                <button type="submit">Edit</button>
+              </form>
+              <% } %>
+            </td>
         </tr>
       <% }); %>
       <tr>
-        <td colspan="2"></td>
+        <td colspan="3"></td>
         <td>
           <strong>
             <%= (total / movie.reviews.length).toFixed(1) %>
